<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical"
    tools:context=".view.UserLogin">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/main_layout"
        android:layout_weight="0.93">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="4"
            android:orientation="vertical"
            android:gravity="center|top">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/login_cover"
                android:orientation="vertical"
                android:weightSum="3"
                android:layout_weight="1.4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_weight="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.3" />

                    <ImageView
                        android:layout_width="180dp"
                        android:layout_height="30dp"
                    />


                </LinearLayout>


            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="4"
            android:orientation="vertical"
            android:gravity="center|bottom">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:weightSum="5.0"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="35dp"
                    app:cardElevation="4dp"

                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:weightSum="5">

                        //0.2
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.2"/>

                        //0.4
                        <com.tool.customfonts.MyTextView_SF_Pro_Display_Bold
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_marginLeft="25dp"
                            android:text="@string/create_account"
                            android:textSize="22sp"
                            android:textColor="@color/text_color_registration"
                            android:layout_weight="0.4"/>

                        //0.4
                        <com.tool.customfonts.MyTextView_SF_Pro_Display_Medium
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_marginLeft="25dp"
                            android:text="@string/signinto"
                            android:textSize="14sp"
                            android:textColor="@color/textcolorlogin"
                            android:layout_weight="0.4"/>

                        //0.1
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.1"/>

                        //0.55
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:weightSum="5"
                            android:orientation="horizontal"
                            android:layout_marginLeft="25dp"
                            android:layout_weight="0.55">

                            <ImageView
                                android:layout_width="0dp"
                                android:layout_weight="0.8"
                                android:layout_height="match_parent"
                                android:background="@drawable/loginemail"/>
                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="0.2"/>
                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:weightSum="5"
                                android:layout_weight="4">

                                <com.tool.customfonts.MyTextView_SF_Pro_Display_Bold
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:text="@string/email"
                                    android:textColor="@color/text_color_registration"
                                    android:layout_weight="1.6"/>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight="0.4"/>

                                <EditText
                                    android:id="@+id/mail_et"
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight="2.9"
                                    android:ems="10"
                                    android:textCursorDrawable="@null"
                                    android:textColor="#A3A3A4"
                                    android:paddingLeft="5dp"
                                    android:background="@null">

                                    <requestFocus />
                                </EditText>

                                <View
                                    android:id="@+id/UnderLine1"
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight="0.1"
                                    android:layout_marginTop="2dp"
                                    android:background="@color/underline_color" />

                            </LinearLayout>


                        </LinearLayout>

                        //0.25
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.25"/>


                        //0.55
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:weightSum="5"
                            android:orientation="horizontal"
                            android:layout_marginLeft="25dp"
                            android:layout_weight="0.55">

                            <ImageView
                                android:layout_width="0dp"
                                android:layout_weight="0.8"
                                android:layout_height="match_parent"
                                android:background="@drawable/password"/>
                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="0.2"/>
                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:weightSum="5"
                                android:layout_weight="4">

                                <com.tool.customfonts.MyTextView_SF_Pro_Display_Bold
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:text="@string/password"
                                    android:textColor="@color/text_color_registration"
                                    android:layout_weight="1.6"/>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight="0.4"/>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight="2.9"
                                    android:orientation="horizontal">

                                    <EditText
                                        android:id="@+id/passwordEdt"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_weight="2.5"
                                        android:ems="10"
                                        android:paddingRight="20dp"
                                        android:textCursorDrawable="@null"
                                        android:textColor="#A3A3A4"
                                        android:paddingLeft="5dp"
                                        android:inputType="textPassword"
                                        android:background="@null">

                                        <requestFocus />
                                    </EditText>

                                    <ImageButton
                                        android:id="@+id/showpassword"
                                        android:layout_weight="0.5"
                                        android:layout_marginRight="10dp"
                                        style="?android:buttonBarButtonStyle"
                                        android:onClick="ShowHidePass"
                                        android:src="@drawable/ic_hide_password"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content" />

                                </LinearLayout>

                                <View
                                    android:id="@+id/UnderLine3"
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight="0.1"
                                    android:layout_marginTop="2dp"
                                    android:background="@color/underline_color" />

                            </LinearLayout>


                        </LinearLayout>

                        //0.25
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.1"/>

                        //0.3
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:layout_weight="0.3">

                            <CheckBox
                                android:id="@+id/checkbox"
                                android:layout_width="30dp"
                                android:layout_height="match_parent"
                                android:button="@drawable/custom_checkbox"
                                android:scaleX="0.5"
                                android:scaleY="0.5"></CheckBox>

                            <com.tool.customfonts.MyTextView_SF_Pro_Display_Medium
                                android:layout_width="wrap_content"
                                android:gravity="center"
                                android:textColor="@color/checkboxcolor"
                                android:text="@string/usecurrentlocation"
                                android:layout_height="match_parent"/>

                        </LinearLayout>

                        //0.4
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.4"/>

                        //0.44
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_weight="0.55"
                            android:layout_marginLeft="25dp"
                            android:layout_marginRight="25dp"
                            android:layout_height="0dp">

                            <Button
                                android:id="@+id/login"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@drawable/button_custom_login"
                                android:textColor="#27AE60"
                                android:text="@string/login_text"
                                />
                        </LinearLayout>

                        //0.1
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.1"/>

                        //0.3
                        <LinearLayout
                            android:id="@+id/forg"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:layout_weight="0.3">

                            <com.tool.customfonts.MyTextView_SF_Pro_Display_Medium
                                android:id="@+id/forget_password"
                                android:layout_width="wrap_content"
                                android:gravity="center"
                                android:textColor="@color/forgettext"
                                android:text="@string/forgetpassword"
                                android:layout_height="match_parent"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.1"/>

                        //0.3
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:layout_weight="0.3">

                            <com.tool.customfonts.MyTextView_SF_Pro_Display_Medium
                                android:id="@+id/newuser"
                                android:layout_width="wrap_content"
                                android:gravity="center"
                                android:textColor="@color/forgettext"
                                android:text="@string/newuser"
                                android:layout_height="match_parent"/>

                            <com.tool.customfonts.MyTextView_SF_Pro_Display_Bold
                                android:id="@+id/sign_up"
                                android:layout_width="wrap_content"
                                android:gravity="center"
                                android:textStyle="bold"
                                android:layout_marginLeft="2dp"
                                android:textColor="@color/checkboxcolor"
                                android:text="@string/signup"
                                android:layout_height="match_parent"/>

                        </LinearLayout>

                        //0.4
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.36"/>




                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>



        </LinearLayout>

    </FrameLayout>
    <LinearLayout
        android:id="@+id/soft_key_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.07"
        android:orientation="vertical"
        android:background="@color/intro_description_color">

    </LinearLayout>

</LinearLayout>